Web - Styling: Prevent front page starred build traffic lights from wrapping to a newline.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,7 +36,9 @@ li {
 .no-bullet {
     list-style: none;
 }
-
+.no-wrap {
+    white-space: nowrap;
+}
 .panel-products li {
 	list-style: none;
 }
